<resources>
    <string name="app_name">MyFlappyLogin</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="not_registered">NOT_REGISTERED?</string>
    <string name="register">REGISTER</string>
    <string name="conform_password">Conform Password</string>
    <string name="allready_registered">Already Registered?</string>
    <string name="backto_login">LOGIN</string>
    <string name="registerbutton">registerButton</string>
</resources>
