<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/back">

    Image

    <EditText
        android:id="@+id/username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/passowrd"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"/>
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/register"/>
    </LinearLayout>

</LinearLayout>